# HURRICANE

./: .gitignore  .gitmodules  CONCEPT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  SUBMODULE_INTEGRATION.md  docker-compose.yml  fastport-ipv6  fastport-unified  hurricane  hurricane_autonomy_audit.yaml  hurricane_tui.py  install.sh  launch.sh
.github/workflows/: ci.yml
config/: mullvad-example.conf  prometheus.yml  v6-gatewayd-he.env.example  v6-gatewayd.conf  v6-gatewayd.conf.example
docs/: AUTHENTICATION.md  DEPLOYMENT.md  IPV9_ROUTING_INTEGRATION.md  MULLVAD.md  WEBUI.md
fastport/: .gitignore  BUILD.md  LICENSE  MANIFEST.in  README.md  README_IPV6.md  benchmark.py  build.sh  pyproject.toml  requirements.txt  setup.py
fastport/.cargo/: config.toml
fastport/fastport/: __init__.py  anyconnect_tester.py  cve_lookup.py  cve_scanner.py  cve_scanner_tui.py  scanner.py  scanner_enhanced.py  scanner_gui.py  scanner_ipv6.py  scanner_pro_tui.py  scanner_tui.py  scanner_unified.py
fastport/fastport-core/: Cargo.toml  build.rs
fastport/fastport-core/src/: async_scanner.rs  lib.rs  packet_processor.rs  simd_scanner.rs  thread_pinning.rs
include/: api.h  config.h  crypto.h  health.h  hwauth.h  log.h  mcp.h  proxy.h  session.h  socks5.h  tunnel.h  util.h  v6gw.h
pam/: v6-gatewayd-fingerprint  v6-gatewayd-yubikey
scripts/: build-and-launch.sh  comprehensive-api.py  he-creds-encrypt.sh  hurricane-router.py  router-api-standalone.py  router-api.py  split-tunnel.py  v6gw-toggle.sh
src/: api.c  config.c  crypto.c  he-update.c  health.c  hwauth.c  log.c  main.c  mcp.c  proxy.c  session.c  socks5.c  tunnel.c  util.c  v6gw-keygen.c
systemd/: he-update.service  he-update.timer  v6-gatewayd.service
tests/: benchmark.sh  integration_test.sh
web/: index.html
